[package]
name = "rbxbuild"
version = "0.1.0"
edition = "2021"

[dependencies]
rojo = { git = "https://github.com/rojo-rbx/rojo", package = "rojo" }
rbx_dom_weak = "4.0.0"
rbx_reflection = "6.0.0"
rbx_reflection_database = "2.0.0"
rbx_xml = "2.0.0"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
